@@ -13,6 +13,8 @@ Improved
 ~~~~~~~~
 
 - Added ``force`` flag to ``ScanData.read_dicom``
+- Added ``open`` to ``PrearchiveFile`` (same as for FileData)
+- Added ``read_dicom`` to ``PrearchiveScan`` (same as for ScanData)
 - Documentation
 
 0.3.17 - 2019-04-04
